--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
+    <head><meta charset="utf-8" />
  
         <title>Tuts+ Chat Application</title>
         <meta name="description" content="Tuts+ Chat Application" />
         <link rel="stylesheet" href="style.css" />
     </head>
+<?php
+session_start();
+ 
+if(isset($_POST['enter'])){
+    if($_POST['name'] != ""){
+        $_SESSION['name'] = stripslashes(htmlspecialchars($_POST['name']));
+    }
+    else{
+        echo '<span class="error">Please type in a name</span>';
+    }
+}
+ 
+function loginForm(){
+    <div id="loginform">
+      <p>Please enter your name to continue!</p>
+      <form action="index.php" method="post">
+        <label for="name">Name &mdash;</label>
+        <input type="text" name="name" id="name" />
+        <input type="submit" name="enter" id="enter" value="Enter" />
+      </form>
+    </div>
+   }
+?>
+        
     <body>
         <div id="wrapper">
             <div id="menu">
